--- a/tfg-frontend/src/main/resources/templates/paginas/contactoReserva.html
+++ b/tfg-frontend/src/main/resources/templates/paginas/contactoReserva.html
@@ -7,6 +7,10 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
 </head>
 <body>
+<div th:if="${msg != null}" class="alert alert-success" role="alert">
+    <span th:text="${msg}"></span>
+    <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+</div>
 <nav class="navbar sticky-top navbar-expand-lg bg-body-tertiary">
     <div class="container-fluid">
         <a class="navbar-brand" href="#"></a>
@@ -42,47 +46,62 @@
         </div>
     </div>
 </nav>
-<h1 >Reserva actual</h1>
-<table class="table table-hover">
-    <thead class="thead-light">
-    <tr>
-        <th scope="col">Actividad</th>
-        <th scope="col">Sesión</th>
-    </tr>
-    </thead>
-    <tbody>
-    <tr th:each="actividad : ${actividadesElegidas}">
-        <td th:text="${actividad.value.getNombre()}"></td>
-        <td th:text="${actividad.key}"></td>
-    </tr>
-    </tbody>
-</table>
-<p>Precio total:</p>
-<p th:text="${precioTotal}"></p>
-<h1>Datos de contacto</h1>
-<div th:if="${msg != null}" class="alert alert-success" role="alert">
-    <span th:text="${msg}"></span>
-    <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+<h1 class="text-center">Reserva actual</h1>
+<div class="container mt-5">
+    <div class="row justify-content-center">
+        <div class="col-lg-10">
+            <table class="table table-bordered table-hover">
+                <thead class="thead-light">
+                <tr>
+                    <th scope="col">Actividad</th>
+                    <th scope="col">Sesión</th>
+                </tr>
+                </thead>
+                <tbody>
+                <tr th:each="actividad : ${actividadesElegidas}">
+                    <td th:text="${actividad.value.getNombre()}"></td>
+                    <td th:text="${actividad.key}"></td>
+                </tr>
+                </tbody>
+            </table>
+        </div>
+    </div>
 </div>
-<form th:action="@{/frontend/guardarReserva}" method="post" >
-    <div class="mb-3">
-        <label for="nombreReservaId" class="form-label">Nombre</label>
-        <input type="text" class="form-control" id="nombreReservaId" name="nombreReserva" placeholder="Introduce tu nombre" required>
+<div class="container mt-5 text-center">
+    <div class="row justify-content-center">
+        <div class="col-lg-12">
+            <p class="mb-0">Precio total: <span th:text="${precioTotal}"></span></p>
+        </div>
     </div>
-    <div class="mb-3">
-        <label for="telefonoReservaId" class="form-label">Teléfono</label>
-        <input type="tel" class="form-control" id="telefonoReservaId" name="telefonoReserva" placeholder="Introduce tu télefono: NNNNNNNNN" pattern="[0-9]{9}" required>
+</div>
+<h1 class="text-center">Datos de contacto</h1>
+<div class="container">
+    <div class="row">
+        <div class="col-md-6 offset-md-3">
+            <div class="card my-5">
+                <form th:action="@{/frontend/guardarReserva}" method="post" class="card-body cardbody-color p-lg-5">
+                    <div class="mb-3">
+                        <label for="nombreReservaId" class="form-label">Nombre</label>
+                        <input type="text" class="form-control" id="nombreReservaId" name="nombreReserva" placeholder="Introduce tu nombre" required>
+                    </div>
+                    <div class="mb-3">
+                        <label for="telefonoReservaId" class="form-label">Teléfono</label>
+                        <input type="tel" class="form-control" id="telefonoReservaId" name="telefonoReserva" placeholder="Introduce tu télefono: NNNNNNNNN" pattern="[0-9]{9}" required>
+                    </div>
+                    <div class="mb-3">
+                        <label for="emailReservaId" class="form-label">Email</label>
+                        <input type="email" class="form-control" id="emailReservaId" name="emailReserva" placeholder="Introduce tu email" required>
+                    </div>
+                    <div class="mb-3">
+                        <label for="datosPagoReservaId" class="form-label">Datos de pago</label>
+                        <input type="text" class="form-control" id="datosPagoReservaId" name="datosPagoReserva" placeholder="Introduce los datos de pago" required>
+                    </div>
+                    <button type="submit" class="btn btn-primary">Confirmar reserva</button>
+                </form>
+            </div>
+        </div>
     </div>
-    <div class="mb-3">
-        <label for="emailReservaId" class="form-label">Email</label>
-        <input type="email" class="form-control" id="emailReservaId" name="emailReserva" placeholder="Introduce tu email" required>
-    </div>
-    <div class="mb-3">
-        <label for="datosPagoReservaId" class="form-label">Datos de pago</label>
-        <input type="text" class="form-control" id="datosPagoReservaId" name="datosPagoReserva" placeholder="Introduce los datos de pago" required>
-    </div>
-    <button type="submit" class="btn btn-primary">Confirmar reserva</button>
-</form>
+</div>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
 </body>
 </html>
