--- a/tfg-frontend/src/main/resources/templates/paginas/credencialesReserva.html
+++ b/tfg-frontend/src/main/resources/templates/paginas/credencialesReserva.html
@@ -42,21 +42,29 @@
         </div>
     </div>
 </nav>
-<form th:action="@{/frontend/comprobarReserva}" method="post" >
-    <div th:if="${msg != null}" class="alert alert-danger" role="alert">
-        <span th:text="${msg}"></span>
-        <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+<div class="container">
+    <div class="row">
+        <div class="col-md-6 offset-md-3">
+            <div class="card my-5">
+                <form th:action="@{/frontend/comprobarReserva}" method="post" class="card-body cardbody-color p-lg-5">
+                    <div th:if="${msg != null}" class="alert alert-danger" role="alert">
+                        <span th:text="${msg}"></span>
+                        <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+                    </div>
+                    <div class="mb-3">
+                        <label for="idReservaCliente" class="form-label">ID de la reserva</label>
+                        <input type="number" class="form-control" id="idReservaCliente" name="idReserva" placeholder="Introduce el ID de la reserva" required>
+                    </div>
+                    <div class="mb-3">
+                        <label for="emailContactoCliente" class="form-label">Email</label>
+                        <input type="email" class="form-control" id="emailContactoCliente" name="emailContacto" placeholder="Introduce el correo de contacto" required>
+                    </div>
+                    <button type="submit" class="btn btn-primary">Ver Reserva</button>
+                </form>
+            </div>
+        </div>
     </div>
-    <div class="mb-3">
-        <label for="idReservaCliente" class="form-label">ID de la reserva</label>
-        <input type="number" class="form-control" id="idReservaCliente" name="idReserva" placeholder="Introduce el ID de la reserva" required>
-    </div>
-    <div class="mb-3">
-        <label for="emailContactoCliente" class="form-label">Email</label>
-        <input type="email" class="form-control" id="emailContactoCliente" name="emailContacto" placeholder="Introduce el correo de contacto" required>
-    </div>
-    <button type="submit" class="btn btn-primary">Ver Reserva</button>
-</form>
+</div>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
 </body>
 </html>
