--- a/tfg-frontend/src/main/resources/templates/paginas/credencialesTarjetaCliente.html
+++ b/tfg-frontend/src/main/resources/templates/paginas/credencialesTarjetaCliente.html
@@ -42,21 +42,29 @@
         </div>
     </div>
 </nav>
-<form th:action="@{/frontend/comprobarTarjetaCliente}" method="post" >
-    <div th:if="${msg != null}" class="alert alert-danger" role="alert">
-        <span th:text="${msg}"></span>
-        <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+<div class="container">
+    <div class="row">
+        <div class="col-md-6 offset-md-3">
+            <div class="card my-5">
+                <form th:action="@{/frontend/comprobarTarjetaCliente}" method="post" class="card-body cardbody-color p-lg-5">
+                    <div th:if="${msg != null}" class="alert alert-danger" role="alert">
+                        <span th:text="${msg}"></span>
+                        <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+                    </div>
+                    <div class="mb-3">
+                        <label for="numeroTarjetaCliente" class="form-label">Número de tarjeta</label>
+                        <input type="text" class="form-control" id="numeroTarjetaCliente" name="numeroTarjeta" placeholder="Introduce el número de la tarjeta">
+                    </div>
+                    <div class="mb-3">
+                        <label for="pinTarjetaCliente" class="form-label">PIN</label>
+                        <input type="password" class="form-control" id="pinTarjetaCliente" name="pinTarjeta" placeholder="Introduce el PIN de la tarjeta">
+                    </div>
+                    <button type="submit" class="btn btn-primary">Ver Tarjeta</button>
+                </form>
+            </div>
+        </div>
     </div>
-    <div class="mb-3">
-        <label for="numeroTarjetaCliente" class="form-label">Número de tarjeta</label>
-        <input type="text" class="form-control" id="numeroTarjetaCliente" name="numeroTarjeta" placeholder="Introduce el número de la tarjeta">
-    </div>
-    <div class="mb-3">
-        <label for="pinTarjetaCliente" class="form-label">PIN</label>
-        <input type="password" class="form-control" id="pinTarjetaCliente" name="pinTarjeta" placeholder="Introduce el PIN de la tarjeta">
-    </div>
-    <button type="submit" class="btn btn-primary">Ver Tarjeta</button>
-</form>
+</div>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
 </body>
 </html>
