--- a/tfg-frontend/src/main/resources/templates/paginas/miembroclub.html
+++ b/tfg-frontend/src/main/resources/templates/paginas/miembroclub.html
@@ -42,21 +42,29 @@
         </div>
     </div>
 </nav>
-<form th:action="@{/frontend/guardarMiembroclub}" method="post"  th:object="${miembroclub}">
-    <div th:if="${msg_pos_guardar != null}" class="alert alert-success" role="alert">
-        <span th:text="${msg_pos_guardar}"></span>
-        <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+<div class="container">
+    <div class="row">
+        <div class="col-md-6 offset-md-3">
+            <div class="card my-5">
+                <form th:action="@{/frontend/guardarMiembroclub}" method="post"  th:object="${miembroclub}" class="card-body cardbody-color p-lg-5">
+                    <div th:if="${msg_pos_guardar != null}" class="alert alert-success" role="alert">
+                        <span th:text="${msg_pos_guardar}"></span>
+                        <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+                    </div>
+                    <div th:if="${msg_neg_guardar != null}" class="alert alert-danger" role="alert">
+                        <span th:text="${msg_neg_guardar}"></span>
+                        <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+                    </div>
+                    <div class="mb-3">
+                        <label for="correoMiembroclubID" class="form-label">Correo electrónico</label>
+                        <input type="email" class="form-control" th:field="*{email}"  id="correoMiembroclubID" name="correoMiembroclub" placeholder="Introduce el correo">
+                    </div>
+                    <button type="submit" class="btn btn-primary">Registrarme en el club</button>
+                </form>
+            </div>
+        </div>
     </div>
-    <div th:if="${msg_neg_guardar != null}" class="alert alert-danger" role="alert">
-        <span th:text="${msg_neg_guardar}"></span>
-        <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
-    </div>
-    <div class="mb-3">
-        <label for="correoMiembroclubID" class="form-label">Correo electrónico</label>
-        <input type="email" class="form-control" th:field="*{email}"  id="correoMiembroclubID" name="correoMiembroclub" placeholder="Introduce el correo">
-    </div>
-    <button type="submit" class="btn btn-primary">Registrarme en el club</button>
-</form>
+</div>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
 </body>
 </html>
