--- a/tfg-frontend/src/main/resources/templates/paginas/reservaCliente.html
+++ b/tfg-frontend/src/main/resources/templates/paginas/reservaCliente.html
@@ -42,25 +42,37 @@
     </div>
   </div>
 </nav>
-<h1>Datos de la reserva</h1>
-<table class="table table-hover">
-  <thead class="thead-light">
-  <tr>
-    <th scope="col">Actividad</th>
-    <th scope="col">Sesión</th>
-  </tr>
-  </thead>
-  <tbody>
-  <tr th:each="actividad : ${actividadesReserva}">
-    <td th:text="${actividad.getAtraccionID().getNombre()}"></td>
-    <td th:text="${actividad.getSesion()}"></td>
-  </tr>
-  </tbody>
-</table>
-<p th:text="'Fecha de la reserva:' + ${reserva.getFechaReserva()} "></p>
-<p th:text="'Lugar de la reserva:' + ${reserva.getSitioID().getCalle()} "></p>
-<p th:text="'Número de personas de la reserva:' + ${reserva.getPersonas()} "></p>
-<a th:href="@{/frontend/eliminarReserva}" th:text="'Cancelar reserva'" onclick="return confirm('¿Estas seguro?')" class="btn btn-warning" role="button" title="eliminar de la reserva."><i class="fas fa-trash" aria-hidden="true"></i></a>
+<h1 class="text-center">Datos de la reserva</h1>
+<div class="container mt-5">
+  <div class="row justify-content-center">
+    <div class="col-lg-10">
+      <table class="table table-bordered table-hover">
+        <thead class="thead-light">
+        <tr>
+          <th scope="col">Actividad</th>
+          <th scope="col">Sesión</th>
+        </tr>
+        </thead>
+        <tbody>
+        <tr th:each="actividad : ${actividadesReserva}">
+          <td th:text="${actividad.getAtraccionID().getNombre()}"></td>
+          <td th:text="${actividad.getSesion()}"></td>
+        </tr>
+        </tbody>
+      </table>
+    </div>
+  </div>
+</div>
+<p class="text-center" th:text="'Fecha de la reserva: ' + ${reserva.getFechaReserva()} "></p>
+<p class="text-center" th:text="'Lugar de la reserva: ' + ${reserva.getSitioID().getCalle()} + ', ' + ${reserva.getSitioID().getCiudad()} + ' (' + ${reserva.getSitioID().getProvincia()} + ')' "></p>
+<p class="text-center" th:text="'Número de personas de la reserva: ' + ${reserva.getPersonas()} "></p>
+<div class="container mt-5">
+  <div class="row justify-content-center">
+    <div class="col-lg-6">
+      <a th:href="@{/frontend/eliminarReserva}" th:text="'Cancelar reserva'" onclick="return confirm('¿Estas seguro?')" class="btn btn-danger d-block mx-auto" role="button" title="eliminar de la reserva."><i class="fas fa-trash" aria-hidden="true"></i></a>
+    </div>
+  </div>
+</div>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
 </body>
 </html>
