--- a/tfg-frontend/src/main/resources/templates/paginas/tarjetaCliente.html
+++ b/tfg-frontend/src/main/resources/templates/paginas/tarjetaCliente.html
@@ -42,25 +42,32 @@
     </div>
   </div>
 </nav>
-<p>Tickets en la tarjeta:</p>
-<p th:text="${tarjeta.saldoTickets}"></p>
-<p>Saldo en la tarjeta:</p>
-<p th:text="${tarjeta.saldoMoneda}"></p>
-<form th:action="@{/frontend/rellenarSaldoTarjeta}" method="post" >
-  <div th:if="${msg != null}" class="alert alert-danger" role="alert">
-    <span th:text="${msg}"></span>
-    <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+<h1 class="text-center">Información de la tarjeta</h1>
+<p class="text-center">Tickets en la tarjeta: <span th:text="${tarjeta.saldoTickets}"></span></p>
+<p class="text-center">Saldo en la tarjeta: <span th:text="${tarjeta.saldoMoneda}"></span></p>
+<div class="container">
+  <div class="row">
+    <div class="col-md-6 offset-md-3">
+      <div class="card my-5">
+        <form th:action="@{/frontend/rellenarSaldoTarjeta}" method="post" class="card-body cardbody-color p-lg-5">
+          <div th:if="${msg != null}" class="alert alert-danger" role="alert">
+            <span th:text="${msg}"></span>
+            <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+          </div>
+          <div class="mb-3">
+            <label for="numeroCuentaCliente" class="form-label">Número de cuenta</label>
+            <input type="text" class="form-control" id="numeroCuentaCliente" name="numeroCuenta" placeholder="Introduce el número de cuenta" required>
+          </div>
+          <div class="mb-3">
+            <label for="saldoTarjetaCliente" class="form-label">Saldo a añadir</label>
+            <input type="number" class="form-control" id="saldoTarjetaCliente" name="saldoTarjeta" min="0" value="0" step=".01">
+          </div>
+          <button type="submit" class="btn btn-primary">Añadir saldo</button>
+        </form>
+      </div>
+    </div>
   </div>
-  <div class="mb-3">
-    <label for="numeroCuentaCliente" class="form-label">Número de cuenta</label>
-    <input type="text" class="form-control" id="numeroCuentaCliente" name="numeroCuenta" placeholder="Introduce el número de cuenta" required>
-  </div>
-  <div class="mb-3">
-    <label for="saldoTarjetaCliente" class="form-label">Saldo a añadir</label>
-    <input type="number" class="form-control" id="saldoTarjetaCliente" name="saldoTarjeta" min="0" value="0" step=".01">
-  </div>
-  <button type="submit" class="btn btn-primary">Añadir saldo</button>
-</form>
+</div>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
 </body>
 </html>
