--- a/tfg-frontend/src/main/resources/templates/paginas/atraccionesForm.html
+++ b/tfg-frontend/src/main/resources/templates/paginas/atraccionesForm.html
@@ -54,29 +54,37 @@
         </div>
     </div>
 </nav>
-<h2 th:text="${titulo}"></h2>
-<form th:action="@{/frontend/atraccionesGuardar}" method="post"  th:object="${atraccion}">
-    <div class="mb-3">
-        <label for="nombre" class="form-label"> Nombre </label>
-        <input type="text" class="form-control" th:field="*{nombre}"  id="nombre" name="canombrelle" placeholder="Nombre de la atracción" required>
+<h2 class="text-center" th:text="${titulo}"></h2>
+<div class="container">
+    <div class="row">
+        <div class="col-md-6 offset-md-3">
+            <div class="card my-5">
+                <form th:action="@{/frontend/atraccionesGuardar}" method="post"  th:object="${atraccion}" class="card-body cardbody-color p-lg-5">
+                    <div class="mb-3">
+                        <label for="nombre" class="form-label"> Nombre </label>
+                        <input type="text" class="form-control" th:field="*{nombre}"  id="nombre" name="canombrelle" placeholder="Nombre de la atracción" required>
+                    </div>
+                    <div class="mb-3">
+                        <label for="capacidad" class="form-label"> Capacidad </label>
+                        <input type="number" class="form-control" th:field="*{capacidad}"  id="capacidad" name="capacidad" placeholder="Capacidad de la atracción" min="1" value="1" step="1" required>
+                    </div>
+                    <div class="mb-3">
+                        <label for="locales">Local</label>
+                        <select id="locales" name="local" th:field="*{sitioID}">
+                            <option th:each="sitio : ${sitios}" th:value="${sitio.getId()}" th:text="${sitio.getCalle()}"></option>
+                        </select>
+                    </div>
+                    <div class="mb-3">
+                        <label for="precio" class="form-label"> Precio </label>
+                        <input type="number" class="form-control" th:field="*{precio}"  id="precio" name="precio" placeholder="Precio de la atracción" min="1" value="1" step="0.01" required>
+                    </div>
+                    <button type="submit" class="btn btn-primary">Guardar</button>
+                    <input type="hidden" th:field="*{id}" />
+                </form>
+            </div>
+        </div>
     </div>
-    <div class="mb-3">
-        <label for="capacidad" class="form-label"> Capacidad </label>
-        <input type="number" class="form-control" th:field="*{capacidad}"  id="capacidad" name="capacidad" placeholder="Capacidad de la atracción" min="1" value="1" step="1" required>
-    </div>
-    <div class="mb-3">
-        <label for="locales">Local</label>
-        <select id="locales" name="local" th:field="*{sitioID}">
-            <option th:each="sitio : ${sitios}" th:value="${sitio.getId()}" th:text="${sitio.getCalle()}"></option>
-        </select>
-    </div>
-    <div class="mb-3">
-        <label for="precio" class="form-label"> Precio </label>
-        <input type="number" class="form-control" th:field="*{precio}"  id="precio" name="precio" placeholder="Precio de la atracción" min="1" value="1" step="0.01" required>
-    </div>
-    <button type="submit" class="btn btn-primary">Guardar</button>
-    <input type="hidden" th:field="*{id}" />
-</form>
+</div>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
 </body>
 </html>
