--- a/tfg-frontend/src/main/resources/templates/paginas/empleadosForm.html
+++ b/tfg-frontend/src/main/resources/templates/paginas/empleadosForm.html
@@ -54,50 +54,58 @@
         </div>
     </div>
 </nav>
-<h2 th:text="${titulo}"></h2>
-<form th:action="@{/frontend/empleadosGuardar}" method="post"  th:object="${empleado}">
-    <div th:if="${msg != null}" class="alert alert-danger" role="alert">
-        <span th:text="${msg}"></span>
-        <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+<h2 class="text-center" th:text="${titulo}"></h2>
+<div class="container">
+    <div class="row">
+        <div class="col-md-6 offset-md-3">
+            <div class="card my-5">
+                <form th:action="@{/frontend/empleadosGuardar}" method="post"  th:object="${empleado}" class="card-body cardbody-color p-lg-5">
+                    <div th:if="${msg != null}" class="alert alert-danger" role="alert">
+                        <span th:text="${msg}"></span>
+                        <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+                    </div>
+                    <div class="mb-3" th:if="${!editarEmpleado}">
+                        <label for="dni" class="form-label"> DNI </label>
+                        <input type="text" class="form-control" th:field="*{dni}"  id="dni" name="dni" placeholder="DNI del empleado" pattern="[0-9]{8}[A-Z]{1}" required>
+                    </div>
+                    <div class="mb-3">
+                        <label for="nombre" class="form-label"> Nombre </label>
+                        <input type="text" class="form-control" th:field="*{nombre}"  id="nombre" name="nombre" placeholder="Nombre del empleado" required>
+                    </div>
+                    <div class="mb-3">
+                        <label for="apellido" class="form-label"> Apellido </label>
+                        <input type="text" class="form-control" th:field="*{apellido}"  id="apellido" name="apellido" placeholder="Apellido del empleado" required>
+                    </div>
+                    <div class="mb-3">
+                        <label for="email" class="form-label"> Email </label>
+                        <input type="email" class="form-control" th:field="*{email}"  id="email" name="email" placeholder="Email corporativo del empleado" required>
+                    </div>
+                    <div class="mb-3">
+                        <label for="password" class="form-label"> Contraseña </label>
+                        <input type="text" class="form-control" th:field="*{password}"  id="password" name="password" placeholder="Contraseña del empleado" required>
+                    </div>
+                    <div class="mb-3">
+                        <label for="locales">Local:</label>
+                        <select id="locales" name="local" th:field="*{sitioID}">
+                            <option th:each="sitio : ${sitios}" th:value="${sitio.getId()}" th:text="${sitio.getCalle()} + ', ' + ${sitio.getCiudad()} + ' (' + ${sitio.getProvincia()} + ')'"></option>
+                        </select>
+                    </div>
+                    <div class="mb-3">
+                        <label for="gerente" class="form-label"> Gerente </label>
+                        <select id="gerente" name="gerente" th:field="*{gerente}">
+                            <option th:value="${1}" th:text="${'Sí'}"></option>
+                            <option th:value="${0}" th:text="${'No'}"></option>
+                        </select>
+                    </div>
+                    <button type="submit" class="btn btn-primary">Guardar</button>
+                    <div class="mb-3" th:if="${editarEmpleado}">
+                        <input type="hidden" th:field="*{dni}" />
+                    </div>
+                </form>
+            </div>
+        </div>
     </div>
-    <div class="mb-3" th:if="${!editarEmpleado}">
-        <label for="dni" class="form-label"> DNI </label>
-        <input type="text" class="form-control" th:field="*{dni}"  id="dni" name="dni" placeholder="DNI del empleado" pattern="[0-9]{8}[A-Z]{1}" required>
-    </div>
-    <div class="mb-3">
-        <label for="nombre" class="form-label"> Nombre </label>
-        <input type="text" class="form-control" th:field="*{nombre}"  id="nombre" name="nombre" placeholder="Nombre del empleado" required>
-    </div>
-    <div class="mb-3">
-        <label for="apellido" class="form-label"> Apellido </label>
-        <input type="text" class="form-control" th:field="*{apellido}"  id="apellido" name="apellido" placeholder="Apellido del empleado" required>
-    </div>
-    <div class="mb-3">
-        <label for="email" class="form-label"> Email </label>
-        <input type="email" class="form-control" th:field="*{email}"  id="email" name="email" placeholder="Email corporativo del empleado" required>
-    </div>
-    <div class="mb-3">
-        <label for="password" class="form-label"> Contraseña </label>
-        <input type="text" class="form-control" th:field="*{password}"  id="password" name="password" placeholder="Contraseña del empleado" required>
-    </div>
-    <div class="mb-3">
-        <label for="locales">Local:</label>
-        <select id="locales" name="local" th:field="*{sitioID}">
-            <option th:each="sitio : ${sitios}" th:value="${sitio.getId()}" th:text="${sitio.getCalle()}"></option>
-        </select>
-    </div>
-    <div class="mb-3">
-        <label for="gerente" class="form-label"> Gerente </label>
-        <select id="gerente" name="gerente" th:field="*{gerente}">
-            <option th:value="${1}" th:text="${'Sí'}"></option>
-            <option th:value="${0}" th:text="${'No'}"></option>
-        </select>
-    </div>
-    <button type="submit" class="btn btn-primary">Guardar</button>
-    <div class="mb-3" th:if="${editarEmpleado}">
-        <input type="hidden" th:field="*{dni}" />
-    </div>
-</form>
+</div>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
 </body>
 </html>
