--- a/tfg-frontend/src/main/resources/templates/paginas/homeEmpleado.html
+++ b/tfg-frontend/src/main/resources/templates/paginas/homeEmpleado.html
@@ -47,21 +47,21 @@
     </div>
     <div class="carousel-inner">
         <div class="carousel-item active">
-            <img src="/img/test_img.png" class="d-block w-100" alt="...">
+            <a th:href="@{/frontend/info}"><img src="/img/test_img.png" class="d-block w-100 vh-100" alt="..."></a>
             <div class="carousel-caption d-none d-md-block">
                 <h5>Lorem ipsum dolor</h5>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam porta.</p>
             </div>
         </div>
         <div class="carousel-item">
-            <img src="/img/test_img.png" class="d-block w-100" alt="...">
+            <a th:href="@{/frontend/info}"><img src="/img/test_img.png" class="d-block w-100 vh-100" alt="..."></a>
             <div class="carousel-caption d-none d-md-block">
                 <h5>Lorem ipsum dolor</h5>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam porta.</p>
             </div>
         </div>
         <div class="carousel-item">
-            <img src="/img/test_img.png" class="d-block w-100" alt="...">
+            <a th:href="@{/frontend/info}"><img src="/img/test_img.png" class="d-block w-100 vh-100" alt="..."></a>
             <div class="carousel-caption d-none d-md-block">
                 <h5>Lorem ipsum dolor</h5>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam porta.</p>
