--- a/tfg-frontend/src/main/resources/templates/paginas/sitiosLista.html
+++ b/tfg-frontend/src/main/resources/templates/paginas/sitiosLista.html
@@ -58,7 +58,7 @@
     <div class="card">
         <h2>Sitios</h2>
         <div class="card-body">
-            <table class="table table-hover">
+            <table class="table table-bordered table-hover">
                 <thead class="thead-light">
                 <tr>
                     <th scope="col">ID</th>
