--- a/tfg-frontend/src/main/resources/templates/paginas/tarjetasEmpleado.html
+++ b/tfg-frontend/src/main/resources/templates/paginas/tarjetasEmpleado.html
@@ -16,16 +16,16 @@
         <div class="collapse navbar-collapse" id="navbarText">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                 <li class="nav-item">
-                    <a class="nav-link" aria-current="page" th:href="@{/frontend/homeEmpleado}">Inicio</a>
+                    <a class="nav-link active" aria-current="page" th:href="@{/frontend/homeEmpleado}">Inicio</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link active" th:href="@{/frontend/tarjetasEmpleado}">Administración de tarjetas</a>
+                    <a class="nav-link" th:href="@{/frontend/tarjetasEmpleado}">Administración de tarjetas</a>
                 </li>
                 <li th:if="${gerente}" class="nav-item">
-                    <a class="nav-link" href="#">Administración de turnos</a>
+                    <a class="nav-link" th:href="@{/frontend/turnos}">Administración de turnos</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Administración de reservas</a>
+                    <a class="nav-link" th:href="@{/frontend/reservasEmpleado}">Administración de reservas</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" th:href="@{/frontend/incidencias}">Administración de incidencias</a>
@@ -39,46 +39,60 @@
         </div>
     </div>
 </nav>
-<h2>Eliminar Tarjeta</h2>
-<form th:action="@{/frontend/eliminarTarjeta}" method="post">
-    <div th:if="${msg_pos_eliminar != null}" class="alert alert-success" role="alert">
-        <span th:text="${msg_pos_eliminar}"></span>
-        <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+<h2 class="text-center">Eliminar Tarjeta</h2>
+<div class="container">
+    <div class="row">
+        <div class="col-md-6 offset-md-3">
+            <div class="card my-5">
+                <form th:action="@{/frontend/eliminarTarjeta}" method="post" class="card-body cardbody-color p-lg-5">
+                    <div th:if="${msg_pos_eliminar != null}" class="alert alert-success" role="alert">
+                        <span th:text="${msg_pos_eliminar}"></span>
+                        <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+                    </div>
+                    <div th:if="${msg_neg_eliminar != null}" class="alert alert-danger" role="alert">
+                        <span th:text="${msg_neg_eliminar}"></span>
+                        <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+                    </div>
+                    <div class="mb-3">
+                        <label for="numeroTarjetaEliminar" class="form-label">Número</label>
+                        <input type="text" class="form-control" id="numeroTarjetaEliminar" name="numeroTarjeta" placeholder="Introduce el número de la tarjeta">
+                    </div>
+                    <button type="submit" class="btn btn-primary">Eliminar</button>
+                </form>
+            </div>
+        </div>
     </div>
-    <div th:if="${msg_neg_eliminar != null}" class="alert alert-danger" role="alert">
-        <span th:text="${msg_neg_eliminar}"></span>
-        <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+</div>
+<h2 class="text-center">Añadir Tarjeta</h2>
+<div class="container">
+    <div class="row">
+        <div class="col-md-6 offset-md-3">
+            <div class="card my-5">
+                <form th:action="@{/frontend/guardarTarjeta}" method="post"  th:object="${tarjeta}" class="card-body cardbody-color p-lg-5">
+                    <div th:if="${msg_pos_guardar != null}" class="alert alert-success" role="alert">
+                        <span th:text="${msg_pos_guardar}"></span>
+                        <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+                    </div>
+                    <div th:if="${msg_neg_guardar != null}" class="alert alert-danger" role="alert">
+                        <span th:text="${msg_neg_guardar}"></span>
+                        <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+                    </div>
+                    <div class="mb-3">
+                        <label for="numeroTarjetaCrear" class="form-label">Número de la tarjeta</label>
+                        <input type="text" class="form-control" th:field="*{numeroID}"  id="numeroTarjetaCrear" name="numeroTarjeta" placeholder="Introduce el número de la tarjeta">
+                    </div>
+                    <div class="mb-3">
+                        <label for="pinTarjetaCrear" class="form-label">PIN</label>
+                        <input type="number" class="form-control" th:field="*{pin}" id="pinTarjetaCrear" name="pinTarjeta" placeholder="Introduce el PIN de la tarjeta">
+                    </div>
+                    <button type="submit" class="btn btn-primary">Añadir</button>
+                    <input type="hidden" th:field="*{saldoMoneda}" />
+                    <input type="hidden" th:field="*{saldoTickets}" />
+                </form>
+            </div>
+        </div>
     </div>
-    <div class="mb-3">
-        <label for="numeroTarjetaEliminar" class="form-label">Número</label>
-        <input type="text" class="form-control" id="numeroTarjetaEliminar" name="numeroTarjeta" placeholder="Introduce el número de la tarjeta">
-    </div>
-    <button type="submit" class="btn btn-primary">Eliminar</button>
-</form>
-
-<h2>Añadir Tarjeta</h2>
-<form th:action="@{/frontend/guardarTarjeta}" method="post"  th:object="${tarjeta}">
-    <div th:if="${msg_pos_guardar != null}" class="alert alert-success" role="alert">
-        <span th:text="${msg_pos_guardar}"></span>
-        <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
-    </div>
-    <div th:if="${msg_neg_guardar != null}" class="alert alert-danger" role="alert">
-        <span th:text="${msg_neg_guardar}"></span>
-        <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
-    </div>
-    <div class="mb-3">
-        <label for="numeroTarjetaCrear" class="form-label">Número de la tarjeta</label>
-        <input type="text" class="form-control" th:field="*{numeroID}"  id="numeroTarjetaCrear" name="numeroTarjeta" placeholder="Introduce el número de la tarjeta">
-    </div>
-    <div class="mb-3">
-        <label for="pinTarjetaCrear" class="form-label">PIN</label>
-        <input type="number" class="form-control" th:field="*{pin}" id="pinTarjetaCrear" name="pinTarjeta" placeholder="Introduce el PIN de la tarjeta">
-    </div>
-    <button type="submit" class="btn btn-primary">Añadir</button>
-    <input type="hidden" th:field="*{saldoMoneda}" />
-    <input type="hidden" th:field="*{saldoTickets}" />
-</form>
-
+</div>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
 </body>
 </html>
