--- a/tfg-frontend/src/main/resources/templates/paginas/verReservasEmpleado.html
+++ b/tfg-frontend/src/main/resources/templates/paginas/verReservasEmpleado.html
@@ -16,16 +16,16 @@
         <div class="collapse navbar-collapse" id="navbarText">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                 <li class="nav-item">
-                    <a class="nav-link" aria-current="page" th:href="@{/frontend/homeEmpleado}">Inicio</a>
+                    <a class="nav-link active" aria-current="page" th:href="@{/frontend/homeEmpleado}">Inicio</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" th:href="@{/frontend/tarjetasEmpleado}">Administración de tarjetas</a>
                 </li>
                 <li th:if="${gerente}" class="nav-item">
-                    <a class="nav-link" th:href="@{/frontend/incidencias}">Administración de turnos</a>
+                    <a class="nav-link" th:href="@{/frontend/turnos}">Administración de turnos</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link active" th:href="@{/frontend/reservasEmpleado}">Administración de reservas</a>
+                    <a class="nav-link" th:href="@{/frontend/reservasEmpleado}">Administración de reservas</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" th:href="@{/frontend/incidencias}">Administración de incidencias</a>
@@ -39,29 +39,43 @@
         </div>
     </div>
 </nav>
-<form th:action="@{/frontend/cargarActividadesFecha}" method="post">
-    <div class="mb-3">
-        <label for="fechaDeReserva" class="form-label">Fecha de la reserva</label>
-        <input type="date" class="form-control" id="fechaDeReserva" name="fechaReserva" th:min="${fechaActual}" th:value="${fechaActual}" required>
+<div class="container">
+    <div class="row">
+        <div class="col-md-6 offset-md-3">
+            <div class="card my-5">
+                <form th:action="@{/frontend/cargarActividadesFecha}" method="post" class="card-body cardbody-color p-lg-5">
+                    <div class="mb-3">
+                        <label for="fechaDeReserva" class="form-label">Fecha de la reserva</label>
+                        <input type="date" class="form-control" id="fechaDeReserva" name="fechaReserva" th:min="${fechaActual}" th:value="${fechaActual}" required>
+                    </div>
+                    <button type="submit" class="btn btn-primary">Comprobar actividades</button>
+                </form>
+            </div>
+        </div>
     </div>
-    <button type="submit" class="btn btn-primary">Comprobar actividades</button>
-</form>
-<table th:if="${!actividadesFecha.isEmpty()}" class="table table-hover">
-    <thead class="thead-light">
-    <tr>
-        <th scope="col">Actividad</th>
-        <th scope="col">Sesión</th>
-        <th scope="col">Número de personas</th>
-    </tr>
-    </thead>
-    <tbody>
-    <tr th:each="actividad : ${actividadesFecha}">
-        <td th:text="${actividad.getAtraccionID().getNombre()}"></td>
-        <td th:text="${actividad.getSesion()}"></td>
-        <td th:text="${actividad.getReservaID().getPersonas()}"></td>
-    </tr>
-    </tbody>
-</table>
+</div>
+<div th:if="${!actividadesFecha.isEmpty()}" class="container mt-5">
+    <div class="row justify-content-center">
+        <div class="col-lg-10">
+            <table class="table table-bordered table-hover">
+                <thead class="thead-light">
+                <tr>
+                    <th scope="col">Actividad</th>
+                    <th scope="col">Sesión</th>
+                    <th scope="col">Número de personas</th>
+                </tr>
+                </thead>
+                <tbody>
+                <tr th:each="actividad : ${actividadesFecha}">
+                    <td th:text="${actividad.getAtraccionID().getNombre()}"></td>
+                    <td th:text="${actividad.getSesion()}"></td>
+                    <td th:text="${actividad.getReservaID().getPersonas()}"></td>
+                </tr>
+                </tbody>
+            </table>
+        </div>
+    </div>
+</div>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
 </body>
 </html>
