--- a/tfg-frontend/src/main/resources/templates/paginas/actividadesReserva.html
+++ b/tfg-frontend/src/main/resources/templates/paginas/actividadesReserva.html
@@ -5,9 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Bootstrap demo</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+    <link href="/css/colors.css" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
 </head>
-<body>
-<nav class="navbar sticky-top navbar-expand-lg bg-body-tertiary">
+<body class="body-custom-font">
+<nav class="navbar sticky-top navbar-expand-lg navbar-custom-colors">
     <div class="container-fluid">
         <a class="navbar-brand" href="#"></a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
@@ -42,39 +46,41 @@
         </div>
     </div>
 </nav>
-<div class="container mt-5" th:if="${!actividadesElegidas.isEmpty()}">
+<div class="container" th:if="${!actividadesElegidas.isEmpty()}">
     <div class="row justify-content-center">
         <div class="col-lg-10">
-            <h1 class="text-center">Reserva actual</h1>
-            <table class="table table-bordered table-hover">
-                <thead class="thead-light">
+            <h2 class="text-center fw-bold">Reserva actual</h2>
+            <table class="table table-bordered table-custom">
+                <thead class="text-center">
                 <tr>
                     <th scope="col">Actividad</th>
                     <th scope="col">Sesión</th>
                     <th scope="col"></th>
                 </tr>
                 </thead>
-                <tbody>
+                <tbody class="text-center">
                 <tr th:each="actividad : ${actividadesElegidas}">
                     <td th:text="${actividad.value.getNombre()}"></td>
                     <td th:text="${actividad.key}"></td>
                     <td>
-                        <a th:href="@{/frontend/eliminarActividad/{hora}  (hora=${actividad.key})   }" th:text="'Eliminar de reserva'" onclick="return confirm('¿Estás seguro?')" class="btn btn-warning" role="button" title="Eliminar de la reserva."><i class="fas fa-trash" aria-hidden="true"></i></a>
+                        <a th:href="@{/frontend/eliminarActividad/{hora}  (hora=${actividad.key})   }" th:text="'Eliminar de reserva'" onclick="return confirm('¿Estás seguro?')" class="btn button-custom-colors" role="button" title="Eliminar de la reserva."><i class="fas fa-trash" aria-hidden="true"></i></a>
                     </td>
                 </tr>
                 </tbody>
             </table>
-            <p class="text-center">Precio total: <span th:text="${precioTotal}"></span></p>
-            <a th:href="@{/frontend/guardarActividades}" class="btn btn-success d-block mx-auto" role="button" title="Guardar y pasar a datos de contacto" th:text="'Guardar y pasar a datos de contacto'"></a>
+            <div class="text-center mb-5">
+                <p class="d-inline">Precio total: <span th:text="${precioTotal}"></span></p>
+                <a th:href="@{/frontend/guardarActividades}" class="btn button-custom-colors-accent d-inline ml-3" role="button" title="Guardar y pasar a datos de contacto" th:text="'Guardar y pasar a datos de contacto'"></a>
+            </div>
         </div>
     </div>
 </div>
-<h1 class="text-center">Atracciones y sesiones</h1>
-<div class="container mt-5">
+<h2 class="text-center fw-bold">Atracciones y sesiones</h2>
+<div class="container">
     <div class="row justify-content-center">
         <div class="card-group">
-            <div th:each="atraccion : ${sesionesPorAtraccion}" class="w-25">
-                <div class="card text-center">
+            <div th:each="atraccion : ${sesionesPorAtraccion}" class="w-25 mb-4 mx-2">
+                <div class="card text-center card-custom-colors">
                     <div class="card-body">
                         <h5 class="card-title" th:text="${atraccion.key.getNombre()}"></h5>
                         <h6 class="card-subtitle mb-2 text-body-secondary" th:text="'Precio por persona: ' + ${atraccion.key.getPrecio()}"></h6>
@@ -82,7 +88,7 @@
                         <div class="list-group list-group-horizontal">
                             <div class="row">
                                 <div class="col-4 mb-1" th:each="sesion : ${atraccion.value}">
-                                    <a class="btn btn-primary" th:href="@{'/frontend/addActividad/hora=' + ${sesion} + '/atraccion=' + ${atraccion.key.getId()} }"><span th:text="${sesion}"></span></a>
+                                    <a class="btn button-custom-colors" th:href="@{'/frontend/addActividad/hora=' + ${sesion} + '/atraccion=' + ${atraccion.key.getId()} }"><span th:text="${sesion}"></span></a>
                                 </div>
                             </div>
                         </div>
@@ -92,10 +98,10 @@
         </div>
     </div>
 </div>
-<div class="container mt-5">
+<div class="container">
     <div class="row justify-content-center">
         <div class="col-lg-6">
-            <a class="btn btn-primary d-block mx-auto" th:href="@{/frontend/volverAtrasDatosReserva}" onclick="return confirm('Volver atrás te permitirá cambiar el número de personas, local y/o fecha de la reserva, pero perderás tu lista de actividades. ¿Quieres volver atrás?')">Volver atrás</a>
+            <a class="btn button-custom-colors-accent d-block mx-auto" th:href="@{/frontend/volverAtrasDatosReserva}" onclick="return confirm('Volver atrás te permitirá cambiar el número de personas, local y/o fecha de la reserva, pero perderás tu lista de actividades. ¿Quieres volver atrás?')">Volver atrás</a>
         </div>
     </div>
 </div>
