--- a/tfg-frontend/src/main/resources/templates/paginas/atraccionesForm.html
+++ b/tfg-frontend/src/main/resources/templates/paginas/atraccionesForm.html
@@ -5,9 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Bootstrap demo</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+    <link href="/css/colors.css" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
 </head>
 <body>
-<nav class="navbar sticky-top navbar-expand-lg bg-body-tertiary">
+<nav class="navbar sticky-top navbar-expand-lg navbar-custom-colors">
     <div class="container-fluid">
         <a class="navbar-brand" href="#"></a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
@@ -54,12 +58,12 @@
         </div>
     </div>
 </nav>
-<h2 class="text-center" th:text="${titulo}"></h2>
 <div class="container">
     <div class="row">
         <div class="col-md-6 offset-md-3">
-            <div class="card my-5">
-                <form th:action="@{/frontend/atraccionesGuardar}" method="post"  th:object="${atraccion}" class="card-body cardbody-color p-lg-5">
+            <h2 class="text-center fw-bold" th:text="${titulo}"></h2>
+            <div class="card">
+                <form th:action="@{/frontend/atraccionesGuardar}" method="post"  th:object="${atraccion}" class="card-body cardbody-color p-lg-5 form-custom-colors">
                     <div class="mb-3">
                         <label for="nombre" class="form-label"> Nombre </label>
                         <input type="text" class="form-control" th:field="*{nombre}"  id="nombre" name="canombrelle" placeholder="Nombre de la atracción" required>
@@ -70,15 +74,15 @@
                     </div>
                     <div class="mb-3">
                         <label for="locales">Local</label>
-                        <select id="locales" name="local" th:field="*{sitioID}">
-                            <option th:each="sitio : ${sitios}" th:value="${sitio.getId()}" th:text="${sitio.getCalle()}"></option>
+                        <select id="locales" name="local" th:field="*{sitioID}" class="form-select">
+                            <option th:each="sitio : ${sitios}" th:value="${sitio.getId()}" th:text="${sitio.getCalle()} + ', ' + ${sitio.getCiudad()} + ' (' + ${sitio.getProvincia()} + ')' "></option>
                         </select>
                     </div>
                     <div class="mb-3">
                         <label for="precio" class="form-label"> Precio </label>
                         <input type="number" class="form-control" th:field="*{precio}"  id="precio" name="precio" placeholder="Precio de la atracción" min="1" value="1" step="0.01" required>
                     </div>
-                    <button type="submit" class="btn btn-primary">Guardar</button>
+                    <button type="submit" class="btn button-custom-colors btn-block w-100">Guardar</button>
                     <input type="hidden" th:field="*{id}" />
                 </form>
             </div>
