--- a/tfg-frontend/src/main/resources/templates/paginas/contactoReserva.html
+++ b/tfg-frontend/src/main/resources/templates/paginas/contactoReserva.html
@@ -5,13 +5,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Bootstrap demo</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+    <link href="/css/colors.css" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
 </head>
-<body>
+<body class="body-custom-font">
 <div th:if="${msg != null}" class="alert alert-success" role="alert">
     <span th:text="${msg}"></span>
     <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
 </div>
-<nav class="navbar sticky-top navbar-expand-lg bg-body-tertiary">
+<nav class="navbar sticky-top navbar-expand-lg navbar-custom-colors">
     <div class="container-fluid">
         <a class="navbar-brand" href="#"></a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
@@ -46,11 +50,11 @@
         </div>
     </div>
 </nav>
-<h1 class="text-center">Reserva actual</h1>
-<div class="container mt-5">
+<h2 class="text-center fw-bold">Reserva actual</h2>
+<div class="container">
     <div class="row justify-content-center">
         <div class="col-lg-10">
-            <table class="table table-bordered table-hover">
+            <table class="table table-bordered table-custom">
                 <thead class="thead-light">
                 <tr>
                     <th scope="col">Actividad</th>
@@ -65,21 +69,15 @@
                 </tbody>
             </table>
         </div>
+        <p class="text-center">Precio total: <span th:text="${precioTotal}"></span></p>
     </div>
 </div>
-<div class="container mt-5 text-center">
-    <div class="row justify-content-center">
-        <div class="col-lg-12">
-            <p class="mb-0">Precio total: <span th:text="${precioTotal}"></span></p>
-        </div>
-    </div>
-</div>
-<h1 class="text-center">Datos de contacto</h1>
 <div class="container">
     <div class="row">
         <div class="col-md-6 offset-md-3">
-            <div class="card my-5">
-                <form th:action="@{/frontend/guardarReserva}" method="post" class="card-body cardbody-color p-lg-5">
+            <h2 class="text-center fw-bold">Datos de contacto</h2>
+            <div class="card">
+                <form th:action="@{/frontend/guardarReserva}" method="post" class="card-body p-lg-5 form-custom-colors">
                     <div class="mb-3">
                         <label for="nombreReservaId" class="form-label">Nombre</label>
                         <input type="text" class="form-control" id="nombreReservaId" name="nombreReserva" placeholder="Introduce tu nombre" required>
@@ -96,7 +94,7 @@
                         <label for="datosPagoReservaId" class="form-label">Datos de pago</label>
                         <input type="text" class="form-control" id="datosPagoReservaId" name="datosPagoReserva" placeholder="Introduce los datos de pago" required>
                     </div>
-                    <button type="submit" class="btn btn-primary">Confirmar reserva</button>
+                    <button type="submit" class="btn button-custom-colors btn-block mb-5 w-100">Confirmar reserva</button>
                 </form>
             </div>
         </div>
