--- a/tfg-frontend/src/main/resources/templates/paginas/datosReserva.html
+++ b/tfg-frontend/src/main/resources/templates/paginas/datosReserva.html
@@ -3,11 +3,15 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Bootstrap demo</title>
+    <title>Datos de la reserva</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+    <link href="/css/colors.css" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
 </head>
-<body>
-<nav class="navbar navbar-expand-lg bg-body-tertiary">
+<body class="body-custom-font">
+<nav class="navbar navbar-expand-lg navbar-custom-colors">
     <div class="container-fluid">
         <a class="navbar-brand" href="#"></a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
@@ -42,11 +46,12 @@
         </div>
     </div>
 </nav>
-<div class="container">
+<div class="container my-auto">
     <div class="row">
         <div class="col-md-6 offset-md-3">
-            <div class="card my-5">
-                <form th:action="@{/frontend/cargarActividades}" method="post" class="card-body cardbody-color p-lg-5">
+            <h2 class="text-center fw-bold">Datos de la reserva</h2>
+            <div class="card">
+                <form th:action="@{/frontend/cargarActividades}" method="post" class="card-body form-custom-colors p-lg-5">
                     <div th:if="${msg != null}" class="alert alert-danger" role="alert">
                         <span th:text="${msg}"></span>
                         <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
@@ -57,7 +62,7 @@
                     </div>
                     <div class="mb-3">
                         <label for="locales">Selecciona un local:</label>
-                        <select id="locales" name="local">
+                        <select id="locales" name="local" class="form-select">
                             <option th:each="sitio : ${sitios}" th:value="${sitio.getId()}" th:text="${sitio.getCalle()} + ', ' + ${sitio.getCiudad()} + ' (' + ${sitio.getProvincia()} + ')' "></option>
                         </select>
                     </div>
@@ -65,7 +70,7 @@
                         <label for="fechaDeReserva" class="form-label">Fecha de la reserva</label>
                         <input type="date" class="form-control" id="fechaDeReserva" name="fechaReserva" th:min="${fechaActual}" th:value="${fechaActual}">
                     </div>
-                    <button type="submit" class="btn btn-primary btn-block mb-5 w-100">Comprobar actividades</button>
+                    <button type="submit" class="btn button-custom-colors btn-block w-100">Comprobar actividades</button>
                 </form>
             </div>
         </div>
