--- a/tfg-frontend/src/main/resources/templates/paginas/empleadosLista.html
+++ b/tfg-frontend/src/main/resources/templates/paginas/empleadosLista.html
@@ -5,9 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Bootstrap demo</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+    <link href="/css/colors.css" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
 </head>
 <body>
-<nav class="navbar sticky-top navbar-expand-lg bg-body-tertiary">
+<nav class="navbar sticky-top navbar-expand-lg navbar-custom-colors">
     <div class="container-fluid">
         <a class="navbar-brand" href="#"></a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
@@ -55,10 +59,10 @@
     </div>
 </nav>
 <div class="container">
-    <div class="card">
-        <h2>Empleados</h2>
+    <div class="card border-light">
+        <h2 class="text-center fw-bold">Empleados</h2>
         <div class="card-body">
-            <table class="table table-bordered table-hover">
+            <table class="table table-bordered table-custom">
                 <thead class="thead-light">
                 <tr>
                     <th scope="col">DNI</th>
@@ -77,22 +81,21 @@
                     <td th:text="${empleado.apellido}"></td>
                     <td th:text="${empleado.email}"></td>
                     <td th:text="${empleado.password}"></td>
-                    <td th:text="${empleado.sitioID.id}"></td>
+                    <td th:text="${empleado.sitioID.calle} + ', ' + ${empleado.sitioID.ciudad} + ' (' + ${empleado.sitioID.provincia} + ')' "></td>
                     <td th:text="${empleado.gerente}"></td>
                     <td>
-                        <a th:href="@{/frontend/empleadosEditar/{dni}  (dni=${empleado.dni})   }" th:text="'Editar'" class="btn btn-warning" role="button" title="editar empleado"><i class="fas fa-trash" aria-hidden="true"></i></a>
-                        <a th:href="@{/frontend/empleadosEliminar/{dni}  (dni=${empleado.dni})   }" th:text="'Eliminar'" onclick="return confirm('¿Estas seguro?. Se borrarán también todos los turnos e incidencias asociados a este empleado.')" class="btn btn-danger" role="button" title="eliminar empleado"><i class="fas fa-trash" aria-hidden="true"></i></a>
+                        <a th:href="@{/frontend/empleadosEditar/{dni}  (dni=${empleado.dni})   }" th:text="'Editar'" class="btn button-custom-colors" role="button" title="editar empleado"><i class="fas fa-trash" aria-hidden="true"></i></a>
+                        <a th:href="@{/frontend/empleadosEliminar/{dni}  (dni=${empleado.dni})   }" th:text="'Eliminar'" onclick="return confirm('¿Estas seguro?. Se borrarán también todos los turnos e incidencias asociados a este empleado.')" class="btn button-custom-colors-accent" role="button" title="eliminar empleado"><i class="fas fa-trash" aria-hidden="true"></i></a>
                     </td>
                 </tr>
 
                 </tbody>
             </table>
-
-            <nav th:replace="~{paginator-nav :: paginator}"></nav>
-
+            <div class="d-flex justify-content-center">
+                <nav th:replace="paginator-nav :: paginator"></nav>
+            </div>
         </div>
     </div>
-    <hr>
 </div>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
 </body>
