--- a/tfg-frontend/src/main/resources/templates/paginas/homeEmpleado.html
+++ b/tfg-frontend/src/main/resources/templates/paginas/homeEmpleado.html
@@ -5,9 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Bootstrap demo</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+    <link href="/css/colors.css" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
 </head>
 <body>
-<nav class="navbar sticky-top navbar-expand-lg bg-body-tertiary">
+<nav class="navbar sticky-top navbar-expand-lg navbar-custom-colors">
     <div class="container-fluid">
         <a class="navbar-brand" href="#"></a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
@@ -47,23 +51,23 @@
     </div>
     <div class="carousel-inner">
         <div class="carousel-item active">
-            <a th:href="@{/frontend/info}"><img src="/img/test_img.png" class="d-block w-100 vh-100" alt="..."></a>
+            <a th:href="@{/frontend/tarjetasEmpleado}"><img src="/img/test_img.png" class="d-block w-100 vh-100" alt="..."></a>
             <div class="carousel-caption d-none d-md-block">
-                <h5>Lorem ipsum dolor</h5>
+                <h5>Administración de tarjetas</h5>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam porta.</p>
             </div>
         </div>
         <div class="carousel-item">
-            <a th:href="@{/frontend/info}"><img src="/img/test_img.png" class="d-block w-100 vh-100" alt="..."></a>
+            <a th:href="@{/frontend/reservasEmpleado}"><img src="/img/test_img.png" class="d-block w-100 vh-100" alt="..."></a>
             <div class="carousel-caption d-none d-md-block">
-                <h5>Lorem ipsum dolor</h5>
+                <h5>Administración de reservas</h5>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam porta.</p>
             </div>
         </div>
         <div class="carousel-item">
-            <a th:href="@{/frontend/info}"><img src="/img/test_img.png" class="d-block w-100 vh-100" alt="..."></a>
+            <a th:href="@{/frontend/incidencias}"><img src="/img/test_img.png" class="d-block w-100 vh-100" alt="..."></a>
             <div class="carousel-caption d-none d-md-block">
-                <h5>Lorem ipsum dolor</h5>
+                <h5>Administración de incidencias</h5>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam porta.</p>
             </div>
         </div>
