--- a/tfg-frontend/src/main/resources/templates/paginas/incidencias.html
+++ b/tfg-frontend/src/main/resources/templates/paginas/incidencias.html
@@ -5,9 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Bootstrap demo</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+    <link href="/css/colors.css" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
 </head>
 <body>
-<nav class="navbar sticky-top navbar-expand-lg bg-body-tertiary">
+<nav class="navbar sticky-top navbar-expand-lg navbar-custom-colors">
     <div class="container-fluid">
         <a class="navbar-brand" href="#"></a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
@@ -16,7 +20,7 @@
         <div class="collapse navbar-collapse" id="navbarText">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                 <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" th:href="@{/frontend/homeEmpleado}">Inicio</a>
+                    <a class="nav-link" aria-current="page" th:href="@{/frontend/homeEmpleado}">Inicio</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" th:href="@{/frontend/tarjetasEmpleado}">Administración de tarjetas</a>
@@ -28,7 +32,7 @@
                     <a class="nav-link" th:href="@{/frontend/reservasEmpleado}">Administración de reservas</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" th:href="@{/frontend/incidencias}">Administración de incidencias</a>
+                    <a class="nav-link active" th:href="@{/frontend/incidencias}">Administración de incidencias</a>
                 </li>
             </ul>
             <ul class="navbar-nav ml-auto">
@@ -39,12 +43,12 @@
         </div>
     </div>
 </nav>
-<h2 class="text-center">Añadir Incidencia</h2>
 <div class="container">
     <div class="row">
-        <div class="col-md-6 offset-md-3">
-            <div class="card my-5">
-                <form th:action="@{/frontend/guardarIncidencia}" method="post"  th:object="${incidencia}" class="card-body cardbody-color p-lg-5">
+        <div class="col-md-6 text-left">
+            <h2 class="text-center fw-bold">Añadir Incidencia</h2>
+            <div class="card">
+                <form th:action="@{/frontend/guardarIncidencia}" method="post"  th:object="${incidencia}" class="card-body cardbody-color p-lg-5 form-custom-colors">
                     <div th:if="${msg_pos_guardar != null}" class="alert alert-success" role="alert">
                         <span th:text="${msg_pos_guardar}"></span>
                         <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
@@ -53,47 +57,46 @@
                         <label for="descripcionIncidenciaCrear" class="form-label">Descripción de la incidencia</label>
                         <input type="text" class="form-control" th:field="*{descripcion}"  id="descripcionIncidenciaCrear" name="descripcionIncidencia" placeholder="Descripción general de la incidencia">
                     </div>
-                    <button type="submit" class="btn btn-primary">Añadir</button>
+                    <button type="submit" class="btn button-custom-colors btn-block w-100">Añadir</button>
                     <input type="hidden" th:field="*{id}" />
                     <input type="hidden" th:field="*{cerrada}" />
                     <input type="hidden" th:field="*{dniEmpleado}" />
                 </form>
             </div>
         </div>
-    </div>
-</div>
-<div class="container">
-    <div class="card">
-        <h2>Incidencias del local</h2>
-        <div th:if="${msg_pos_cerrar != null}" class="alert alert-success" role="alert">
-            <span th:text="${msg_pos_cerrar}"></span>
-            <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+        <div class="col-md-6">
+            <h2 class="text-center fw-bold">Incidencias del local</h2>
+            <div class="card border-light">
+                <div th:if="${msg_pos_cerrar != null}" class="alert alert-success" role="alert">
+                    <span th:text="${msg_pos_cerrar}"></span>
+                    <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+                </div>
+                <div class="card-body">
+                    <table class="table table-bordered table-custom">
+                        <thead class="thead-light">
+                        <tr>
+                            <th scope="col">Identificador</th>
+                            <th scope="col">Descripción</th>
+                        </tr>
+                        </thead>
+                        <tbody>
+                        <tr th:each="incidencia : ${listadoIncidencias}">
+                            <td th:text="${incidencia.id}"></td>
+                            <td th:text="${incidencia.descripcion}"></td>
+                            <td>
+                                <a th:href="@{/frontend/cerrarIncidencia/{id}  (id=${incidencia.id})   }" th:text="'cerrar'" onclick="return confirm('¿Estas seguro?')" class="btn button-custom-colors" role="button" title="Cerrar la incidencia."><i class="fas fa-trash" aria-hidden="true"></i></a>
+                            </td>
+                        </tr>
+
+                        </tbody>
+                    </table>
+                    <div class="d-flex justify-content-center">
+                        <nav th:replace="paginator-nav :: paginator"></nav>
+                    </div>
+                </div>
+            </div>
         </div>
-        <div class="card-body">
-            <table class="table table-bordered table-hover">
-                <thead class="thead-light">
-                <tr>
-                    <th scope="col">Identificador</th>
-                    <th scope="col">Descripción</th>
-                </tr>
-                </thead>
-                <tbody>
-                <tr th:each="incidencia : ${listadoIncidencias}">
-                    <td th:text="${incidencia.id}"></td>
-                    <td th:text="${incidencia.descripcion}"></td>
-                    <td>
-                        <a th:href="@{/frontend/cerrarIncidencia/{id}  (id=${incidencia.id})   }" th:text="'cerrar'" onclick="return confirm('¿Estas seguro?')" class="btn btn-warning" role="button" title="Cerrar la incidencia."><i class="fas fa-trash" aria-hidden="true"></i></a>
-                    </td>
-                </tr>
-
-                </tbody>
-            </table>
-
-            <nav th:replace="paginator-nav :: paginator"></nav>
-
-        </div>
     </div>
-    <hr>
 </div>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
 </body>
