--- a/tfg-frontend/src/main/resources/templates/paginas/infoEmpresa.html
+++ b/tfg-frontend/src/main/resources/templates/paginas/infoEmpresa.html
@@ -3,11 +3,15 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Bootstrap demo</title>
+    <title>Sobre Nosotros</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+    <link href="/css/colors.css" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
 </head>
-<body>
-<nav class="navbar sticky-top navbar-expand-lg bg-body-tertiary">
+<body class="body-custom-font">
+<nav class="navbar navbar-custom-colors sticky-top navbar-expand-lg">
     <div class="container-fluid">
         <a class="navbar-brand" href="#"></a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
@@ -46,7 +50,7 @@
     <h1 class="text-center mb-4">Sobre nosotros</h1>
     <div class="row align-items-center">
         <div class="col-lg-6">
-            <img src="https://via.placeholder.com/600x400" class="img-fluid" alt="Placeholder Image">
+            <img src="https://via.placeholder.com/600x400" class="img-fluid img-shadow" alt="Placeholder Image">
         </div>
         <div class="col-lg-6">
             <h2>¿Quiénes Somos?</h2>
@@ -56,7 +60,7 @@
 
     <div class="row align-items-center mt-5">
         <div class="col-lg-6 order-lg-2">
-            <img src="https://via.placeholder.com/600x400" class="img-fluid" alt="Placeholder Image">
+            <img src="https://via.placeholder.com/600x400" class="img-fluid img-shadow" alt="Placeholder Image">
         </div>
         <div class="col-lg-6 order-lg-1">
             <h2>Nuestra Misión</h2>
@@ -66,7 +70,7 @@
 
     <div class="row align-items-center mt-5">
         <div class="col-lg-6">
-            <img src="https://via.placeholder.com/600x400" class="img-fluid" alt="Placeholder Image">
+            <img src="https://via.placeholder.com/600x400" class="img-fluid img-shadow" alt="Placeholder Image">
         </div>
         <div class="col-lg-6">
             <h2>Nuestra Experiencia</h2>
@@ -76,7 +80,7 @@
 
     <div class="row align-items-center mt-5">
         <div class="col-lg-6 order-lg-2">
-            <img src="https://via.placeholder.com/600x400" class="img-fluid" alt="Placeholder Image">
+            <img src="https://via.placeholder.com/600x400" class="img-fluid img-shadow" alt="Placeholder Image">
         </div>
         <div class="col-lg-6 order-lg-1">
             <h2>Compromiso con la Calidad</h2>
@@ -86,7 +90,7 @@
 
     <div class="row align-items-center mt-5">
         <div class="col-lg-6">
-            <img src="https://via.placeholder.com/600x400" class="img-fluid" alt="Placeholder Image">
+            <img src="https://via.placeholder.com/600x400" class="img-fluid img-shadow" alt="Placeholder Image">
         </div>
         <div class="col-lg-6">
             <h2>Nuestra Comunidad</h2>
@@ -96,7 +100,7 @@
 
     <div class="row align-items-center mt-5">
         <div class="col-lg-6 order-lg-2">
-            <img src="https://via.placeholder.com/600x400" class="img-fluid" alt="Placeholder Image">
+            <img src="https://via.placeholder.com/600x400" class="img-fluid img-shadow" alt="Placeholder Image">
         </div>
         <div class="col-lg-6 order-lg-1">
             <h2>Únete a la Diversión</h2>
