--- a/tfg-frontend/src/main/resources/templates/paginas/inicioSesionEmpleado.html
+++ b/tfg-frontend/src/main/resources/templates/paginas/inicioSesionEmpleado.html
@@ -5,13 +5,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Bootstrap demo</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+    <link href="/css/colors.css" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
 </head>
 <body>
 <div class="container">
     <div class="row">
         <div class="col-md-6 offset-md-3">
             <div class="card my-5">
-                <form th:action="@{/frontend/comprobarEmpleado}" method="post" class="card-body cardbody-color p-lg-5">
+                <form th:action="@{/frontend/comprobarEmpleado}" method="post" class="card-body cardbody-color p-lg-5 form-custom-colors">
                     <div th:if="${msg != null}" class="alert alert-danger" role="alert">
                         <span th:text="${msg}"></span>
                         <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
@@ -24,7 +28,7 @@
                         <label for="passwordEmpleado" class="form-label">Contraseña</label>
                         <input type="password" class="form-control" id="passwordEmpleado" name="passwordEmpleado" placeholder="Introduce tu contraseña" required>
                     </div>
-                    <button type="submit" class="btn btn-primary btn-block mb-5 w-100">Iniciar Sesión</button>
+                    <button type="submit" class="btn button-custom-colors btn-block w-100">Iniciar Sesión</button>
                 </form>
             </div>
         </div>
