--- a/tfg-frontend/src/main/resources/templates/paginas/reservaCliente.html
+++ b/tfg-frontend/src/main/resources/templates/paginas/reservaCliente.html
@@ -5,9 +5,13 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Bootstrap demo</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+  <link href="/css/colors.css" rel="stylesheet">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
 </head>
 <body>
-<nav class="navbar sticky-top navbar-expand-lg bg-body-tertiary">
+<nav class="navbar sticky-top navbar-expand-lg navbar-custom-colors">
   <div class="container-fluid">
     <a class="navbar-brand" href="#"></a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
@@ -42,11 +46,11 @@
     </div>
   </div>
 </nav>
-<h1 class="text-center">Datos de la reserva</h1>
-<div class="container mt-5">
+<div class="container">
   <div class="row justify-content-center">
     <div class="col-lg-10">
-      <table class="table table-bordered table-hover">
+      <h2 class="text-center fw-bold">Datos de la reserva</h2>
+      <table class="table table-bordered table-custom">
         <thead class="thead-light">
         <tr>
           <th scope="col">Actividad</th>
@@ -66,10 +70,10 @@
 <p class="text-center" th:text="'Fecha de la reserva: ' + ${reserva.getFechaReserva()} "></p>
 <p class="text-center" th:text="'Lugar de la reserva: ' + ${reserva.getSitioID().getCalle()} + ', ' + ${reserva.getSitioID().getCiudad()} + ' (' + ${reserva.getSitioID().getProvincia()} + ')' "></p>
 <p class="text-center" th:text="'Número de personas de la reserva: ' + ${reserva.getPersonas()} "></p>
-<div class="container mt-5">
+<div class="container">
   <div class="row justify-content-center">
     <div class="col-lg-6">
-      <a th:href="@{/frontend/eliminarReserva}" th:text="'Cancelar reserva'" onclick="return confirm('¿Estas seguro?')" class="btn btn-danger d-block mx-auto" role="button" title="eliminar de la reserva."><i class="fas fa-trash" aria-hidden="true"></i></a>
+      <a th:href="@{/frontend/eliminarReserva}" th:text="'Cancelar reserva'" onclick="return confirm('¿Estas seguro?')" class="btn button-custom-colors-accent d-block" role="button" title="eliminar de la reserva."><i class="fas fa-trash" aria-hidden="true"></i></a>
     </div>
   </div>
 </div>
