--- a/tfg-frontend/src/main/resources/templates/paginas/tarjetaCliente.html
+++ b/tfg-frontend/src/main/resources/templates/paginas/tarjetaCliente.html
@@ -5,9 +5,13 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Bootstrap demo</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+  <link href="/css/colors.css" rel="stylesheet">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
 </head>
 <body>
-<nav class="navbar sticky-top navbar-expand-lg bg-body-tertiary">
+<nav class="navbar sticky-top navbar-expand-lg navbar-custom-colors">
   <div class="container-fluid">
     <a class="navbar-brand" href="#"></a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
@@ -42,14 +46,17 @@
     </div>
   </div>
 </nav>
-<h1 class="text-center">Información de la tarjeta</h1>
-<p class="text-center">Tickets en la tarjeta: <span th:text="${tarjeta.saldoTickets}"></span></p>
-<p class="text-center">Saldo en la tarjeta: <span th:text="${tarjeta.saldoMoneda}"></span></p>
-<div class="container">
+<div class="container mt-5">
   <div class="row">
-    <div class="col-md-6 offset-md-3">
-      <div class="card my-5">
-        <form th:action="@{/frontend/rellenarSaldoTarjeta}" method="post" class="card-body cardbody-color p-lg-5">
+    <div class="col-md-6 text-left">
+      <h2 class="text-center fw-bold">Información de la tarjeta</h2>
+      <p class ="text-center">Tickets en la tarjeta: <span th:text="${tarjeta.saldoTickets}"></span></p>
+      <p class ="text-center">Saldo en la tarjeta: <span th:text="${tarjeta.saldoMoneda}"></span></p>
+    </div>
+    <div class="col-md-6">
+      <h2 class="text-center fw-bold">Añadir Saldo</h2>
+      <div class="card">
+        <form th:action="@{/frontend/rellenarSaldoTarjeta}" method="post" class="card-body cardbody-color p-lg-5 form-custom-colors">
           <div th:if="${msg != null}" class="alert alert-danger" role="alert">
             <span th:text="${msg}"></span>
             <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
@@ -62,7 +69,7 @@
             <label for="saldoTarjetaCliente" class="form-label">Saldo a añadir</label>
             <input type="number" class="form-control" id="saldoTarjetaCliente" name="saldoTarjeta" min="0" value="0" step=".01">
           </div>
-          <button type="submit" class="btn btn-primary">Añadir saldo</button>
+          <button type="submit" class="btn button-custom-colors btn-block w-100">Añadir saldo</button>
         </form>
       </div>
     </div>
