--- a/tfg-frontend/src/main/resources/templates/paginas/tarjetasEmpleado.html
+++ b/tfg-frontend/src/main/resources/templates/paginas/tarjetasEmpleado.html
@@ -5,9 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Bootstrap demo</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+    <link href="/css/colors.css" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
 </head>
 <body>
-<nav class="navbar sticky-top navbar-expand-lg bg-body-tertiary">
+<nav class="navbar sticky-top navbar-expand-lg navbar-custom-colors">
     <div class="container-fluid">
         <a class="navbar-brand" href="#"></a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
@@ -16,10 +20,10 @@
         <div class="collapse navbar-collapse" id="navbarText">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                 <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" th:href="@{/frontend/homeEmpleado}">Inicio</a>
+                    <a class="nav-link" aria-current="page" th:href="@{/frontend/homeEmpleado}">Inicio</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" th:href="@{/frontend/tarjetasEmpleado}">Administración de tarjetas</a>
+                    <a class="nav-link active" th:href="@{/frontend/tarjetasEmpleado}">Administración de tarjetas</a>
                 </li>
                 <li th:if="${gerente}" class="nav-item">
                     <a class="nav-link" th:href="@{/frontend/turnos}">Administración de turnos</a>
@@ -39,12 +43,12 @@
         </div>
     </div>
 </nav>
-<h2 class="text-center">Eliminar Tarjeta</h2>
 <div class="container">
     <div class="row">
-        <div class="col-md-6 offset-md-3">
-            <div class="card my-5">
-                <form th:action="@{/frontend/eliminarTarjeta}" method="post" class="card-body cardbody-color p-lg-5">
+        <div class="col-md-6 text-left">
+            <h2 class="text-center fw-bold">Eliminar Tarjeta</h2>
+            <div class="card">
+                <form th:action="@{/frontend/eliminarTarjeta}" method="post" class="card-body cardbody-color p-lg-5 form-custom-colors">
                     <div th:if="${msg_pos_eliminar != null}" class="alert alert-success" role="alert">
                         <span th:text="${msg_pos_eliminar}"></span>
                         <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
@@ -57,18 +61,14 @@
                         <label for="numeroTarjetaEliminar" class="form-label">Número</label>
                         <input type="text" class="form-control" id="numeroTarjetaEliminar" name="numeroTarjeta" placeholder="Introduce el número de la tarjeta">
                     </div>
-                    <button type="submit" class="btn btn-primary">Eliminar</button>
+                    <button type="submit" class="btn button-custom-colors btn-block w-100">Eliminar</button>
                 </form>
             </div>
         </div>
-    </div>
-</div>
-<h2 class="text-center">Añadir Tarjeta</h2>
-<div class="container">
-    <div class="row">
-        <div class="col-md-6 offset-md-3">
-            <div class="card my-5">
-                <form th:action="@{/frontend/guardarTarjeta}" method="post"  th:object="${tarjeta}" class="card-body cardbody-color p-lg-5">
+        <div class="col-md-6">
+            <h2 class="text-center fw-bold">Añadir Tarjeta</h2>
+            <div class="card">
+                <form th:action="@{/frontend/guardarTarjeta}" method="post"  th:object="${tarjeta}" class="card-body cardbody-color p-lg-5 form-custom-colors">
                     <div th:if="${msg_pos_guardar != null}" class="alert alert-success" role="alert">
                         <span th:text="${msg_pos_guardar}"></span>
                         <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
@@ -85,7 +85,7 @@
                         <label for="pinTarjetaCrear" class="form-label">PIN</label>
                         <input type="number" class="form-control" th:field="*{pin}" id="pinTarjetaCrear" name="pinTarjeta" placeholder="Introduce el PIN de la tarjeta">
                     </div>
-                    <button type="submit" class="btn btn-primary">Añadir</button>
+                    <button type="submit" class="btn button-custom-colors btn-block w-100">Añadir</button>
                     <input type="hidden" th:field="*{saldoMoneda}" />
                     <input type="hidden" th:field="*{saldoTickets}" />
                 </form>
