--- a/tfg-frontend/src/main/resources/templates/paginas/turnosEmpleados.html
+++ b/tfg-frontend/src/main/resources/templates/paginas/turnosEmpleados.html
@@ -5,9 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Bootstrap demo</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+    <link href="/css/colors.css" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
 </head>
 <body>
-<nav class="navbar sticky-top navbar-expand-lg bg-body-tertiary">
+<nav class="navbar sticky-top navbar-expand-lg navbar-custom-colors">
     <div class="container-fluid">
         <a class="navbar-brand" href="#"></a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
@@ -16,13 +20,13 @@
         <div class="collapse navbar-collapse" id="navbarText">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                 <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" th:href="@{/frontend/homeEmpleado}">Inicio</a>
+                    <a class="nav-link" aria-current="page" th:href="@{/frontend/homeEmpleado}">Inicio</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" th:href="@{/frontend/tarjetasEmpleado}">Administración de tarjetas</a>
                 </li>
                 <li th:if="${gerente}" class="nav-item">
-                    <a class="nav-link" th:href="@{/frontend/turnos}">Administración de turnos</a>
+                    <a class="nav-link active" th:href="@{/frontend/turnos}">Administración de turnos</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" th:href="@{/frontend/reservasEmpleado}">Administración de reservas</a>
@@ -39,12 +43,12 @@
         </div>
     </div>
 </nav>
-<h2 class="text-center">Crear turno</h2>
 <div class="container">
     <div class="row">
-        <div class="col-md-6 offset-md-3">
-            <div class="card my-5">
-                <form th:action="@{/frontend/addTurno}" method="post" class="card-body cardbody-color p-lg-5">
+        <div class="col-md-6 text-left">
+            <h2 class="text-center fw-bold">Crear turno</h2>
+            <div class="card">
+                <form th:action="@{/frontend/addTurno}" method="post" class="card-body cardbody-color p-lg-5 form-custom-colors">
                     <div th:if="${msgAddTurnoNeg != null}" class="alert alert-danger" role="alert">
                         <span th:text="${msgAddTurnoNeg}"></span>
                         <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
@@ -55,7 +59,7 @@
                     </div>
                     <div class="mb-3">
                         <label for="empleados">Empleado</label>
-                        <select id="empleados" name="empleado">
+                        <select id="empleados" name="empleado" class="form-select">
                             <option th:each="empleado : ${empleados}" th:value="${empleado.getDni()}" th:text="${empleado.getNombre() + ' ' + empleado.getApellido()}"></option>
                         </select>
                     </div>
@@ -71,62 +75,56 @@
                         <label for="horaSalidaTurnoAdd" class="form-label">Hora de salida</label>
                         <input type="time" class="form-control" id="horaSalidaTurnoAdd" name="horaSalidaTurno" required>
                     </div>
-                    <button type="submit" class="btn btn-primary">Añadir turno</button>
+                    <button type="submit" class="btn button-custom-colors btn-block w-100">Añadir turno</button>
                 </form>
             </div>
         </div>
-    </div>
-</div>
-<h2 class="text-center">Ver Turnos</h2>
-<div class="container">
-    <div class="row">
-        <div class="col-md-6 offset-md-3">
-            <div class="card my-5">
-                <form th:action="@{/frontend/cargarTurnosFecha}" method="post" class="card-body cardbody-color p-lg-5">
+        <div class="col-md-6">
+            <h2 class="text-center fw-bold">Ver Turnos</h2>
+            <div class="card">
+                <form th:action="@{/frontend/cargarTurnosFecha}" method="post" class="card-body cardbody-color p-lg-5 form-custom-colors">
                     <div class="mb-3">
                         <label for="fechaDeTurno" class="form-label">Fecha</label>
                         <input type="date" class="form-control" id="fechaDeTurno" name="fechaTurno" th:min="${fechaActual}" th:value="${fechaActual}" th:max="${fechaSemana}" required>
                     </div>
-                    <button type="submit" class="btn btn-primary">Ver turnos</button>
+                    <button type="submit" class="btn button-custom-colors btn-block w-100">Ver turnos</button>
                 </form>
+            </div>
+            <div class="container" th:if="${turnosFechaDisplay}">
+                <h2 class="text-center fw-bold" th:text="'Turnos del día ' + ${fechaSeleccionada}"></h2>
+                <div class="card border-light">
+                    <div th:if="${msgEliminarTurno != null}" class="alert alert-success" role="alert">
+                        <span th:text="${msgEliminarTurno}"></span>
+                        <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+                    </div>
+                    <div class="card-body">
+                        <table class="table table-bordered table-custom">
+                            <thead class="thead-light">
+                            <tr>
+                                <th scope="col">Nombre</th>
+                                <th scope="col">Hora de entrada</th>
+                                <th scope="col">Hora de salida</th>
+                            </tr>
+                            </thead>
+                            <tbody>
+                            <tr th:each="turno : ${turnosFecha}">
+                                <td th:text="${turno.getEmpleado().getNombre() + ' ' + turno.getEmpleado().getApellido()}"></td>
+                                <td th:text="${turno.getHoraEntrada()}"></td>
+                                <td th:text="${turno.getHoraSalida()}"></td>
+                                <td>
+                                    <a th:href="@{/frontend/eliminarTurno/{id}  (id=${turno.id})   }" th:text="'eliminar'" onclick="return confirm('¿Estas seguro?')" class="btn btn-warning" role="button" title="Eliminar turno."><i class="fas fa-trash" aria-hidden="true"></i></a>
+                                </td>
+                            </tr>
+                            </tbody>
+                        </table>
+                        <div class="d-flex justify-content-center">
+                            <nav th:replace="paginator-nav :: paginator"></nav>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
-</div>
-<div class="container" th:if="${turnosFechaDisplay}">
-    <div class="card">
-        <h2 th:text="'Turnos del día ' + ${fechaSeleccionada}"></h2>
-        <div th:if="${msgEliminarTurno != null}" class="alert alert-success" role="alert">
-            <span th:text="${msgEliminarTurno}"></span>
-            <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
-        </div>
-        <div class="card-body">
-            <table class="table table-bordered table-hover">
-                <thead class="thead-light">
-                <tr>
-                    <th scope="col">Nombre</th>
-                    <th scope="col">Hora de entrada</th>
-                    <th scope="col">Hora de salida</th>
-                </tr>
-                </thead>
-                <tbody>
-                <tr th:each="turno : ${turnosFecha}">
-                    <td th:text="${turno.getEmpleado().getNombre() + ' ' + turno.getEmpleado().getApellido()}"></td>
-                    <td th:text="${turno.getHoraEntrada()}"></td>
-                    <td th:text="${turno.getHoraSalida()}"></td>
-                    <td>
-                        <a th:href="@{/frontend/eliminarTurno/{id}  (id=${turno.id})   }" th:text="'eliminar'" onclick="return confirm('¿Estas seguro?')" class="btn btn-warning" role="button" title="Eliminar turno."><i class="fas fa-trash" aria-hidden="true"></i></a>
-                    </td>
-                </tr>
-
-                </tbody>
-            </table>
-
-            <nav th:replace="paginator-nav :: paginator"></nav>
-
-        </div>
-    </div>
-    <hr>
 </div>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
 </body>
