--- a/tfg-frontend/src/main/resources/templates/paginas/verReservasEmpleado.html
+++ b/tfg-frontend/src/main/resources/templates/paginas/verReservasEmpleado.html
@@ -5,9 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Bootstrap demo</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+    <link href="/css/colors.css" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
 </head>
 <body>
-<nav class="navbar sticky-top navbar-expand-lg bg-body-tertiary">
+<nav class="navbar sticky-top navbar-expand-lg navbar-custom-colors">
     <div class="container-fluid">
         <a class="navbar-brand" href="#"></a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
@@ -16,7 +20,7 @@
         <div class="collapse navbar-collapse" id="navbarText">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                 <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" th:href="@{/frontend/homeEmpleado}">Inicio</a>
+                    <a class="nav-link" aria-current="page" th:href="@{/frontend/homeEmpleado}">Inicio</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" th:href="@{/frontend/tarjetasEmpleado}">Administración de tarjetas</a>
@@ -25,7 +29,7 @@
                     <a class="nav-link" th:href="@{/frontend/turnos}">Administración de turnos</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" th:href="@{/frontend/reservasEmpleado}">Administración de reservas</a>
+                    <a class="nav-link active" th:href="@{/frontend/reservasEmpleado}">Administración de reservas</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" th:href="@{/frontend/incidencias}">Administración de incidencias</a>
@@ -43,12 +47,12 @@
     <div class="row">
         <div class="col-md-6 offset-md-3">
             <div class="card my-5">
-                <form th:action="@{/frontend/cargarActividadesFecha}" method="post" class="card-body cardbody-color p-lg-5">
+                <form th:action="@{/frontend/cargarActividadesFecha}" method="post" class="card-body cardbody-color p-lg-5 form-custom-colors">
                     <div class="mb-3">
                         <label for="fechaDeReserva" class="form-label">Fecha de la reserva</label>
                         <input type="date" class="form-control" id="fechaDeReserva" name="fechaReserva" th:min="${fechaActual}" th:value="${fechaActual}" required>
                     </div>
-                    <button type="submit" class="btn btn-primary">Comprobar actividades</button>
+                    <button type="submit" class="btn button-custom-colors btn-block w-100">Comprobar actividades</button>
                 </form>
             </div>
         </div>
@@ -57,7 +61,7 @@
 <div th:if="${!actividadesFecha.isEmpty()}" class="container mt-5">
     <div class="row justify-content-center">
         <div class="col-lg-10">
-            <table class="table table-bordered table-hover">
+            <table class="table table-bordered table-custom">
                 <thead class="thead-light">
                 <tr>
                     <th scope="col">Actividad</th>
