--- a/tfg-frontend/src/main/resources/templates/paginas/atraccionesLista.html
+++ b/tfg-frontend/src/main/resources/templates/paginas/atraccionesLista.html
@@ -60,7 +60,7 @@
 </nav>
 <div class="container">
     <div class="card border-light">
-        <h2 class="text-center fw-bold">Atracciones</h2>
+        <h2 class="text-center fw-bold py-3">Atracciones</h2>
         <div class="card-body">
             <table class="table table-bordered table-custom">
                 <thead class="thead-light">
