--- a/tfg-frontend/src/main/resources/templates/paginas/miembroclub.html
+++ b/tfg-frontend/src/main/resources/templates/paginas/miembroclub.html
@@ -49,7 +49,7 @@
 <div class="container">
     <div class="row">
         <div class="col-md-6 offset-md-3">
-            <h2 class="text-center fw-bold">Club Fun</h2>
+            <h2 class="text-center fw-bold py-3">Club Fun</h2>
             <div class="card">
                 <form th:action="@{/frontend/guardarMiembroclub}" method="post"  th:object="${miembroclub}" class="card-body cardbody-color p-lg-5 form-custom-colors">
                     <div th:if="${msg_pos_guardar != null}" class="alert alert-success" role="alert">
