--- a/tfg-frontend/src/main/resources/templates/home.html
+++ b/tfg-frontend/src/main/resources/templates/home.html
@@ -77,7 +77,7 @@
             </div>
         </div>
         <div class="carousel-item">
-            <a th:href="@{/frontend/credencialesTarjetaCliente}"><img src="/img/card_img.jpg" class="d-block w-100 vh-100" alt="..."></a>
+            <a th:href="@{/frontend/credencialesTarjetaCliente}"><img src="/img/card_img.png" class="d-block img-fluid" alt="..."></a>
             <div class="carousel-caption d-none d-md-block">
                 <h5>Ver Tarjeta</h5>
                 <p>Ve la información de tu tarjeta y recarga su saldo.</p>
