--- a/tfg-frontend/src/main/resources/templates/paginas/contactoReserva.html
+++ b/tfg-frontend/src/main/resources/templates/paginas/contactoReserva.html
@@ -50,7 +50,7 @@
         </div>
     </div>
 </nav>
-<h2 class="text-center fw-bold">Reserva actual</h2>
+<h2 class="text-center fw-bold py-3">Reserva actual</h2>
 <div class="container">
     <div class="row justify-content-center">
         <div class="col-lg-10">
@@ -75,7 +75,7 @@
 <div class="container">
     <div class="row">
         <div class="col-md-6 offset-md-3">
-            <h2 class="text-center fw-bold">Datos de contacto</h2>
+            <h2 class="text-center fw-bold py-3">Datos de contacto</h2>
             <div class="card">
                 <form th:action="@{/frontend/guardarReserva}" method="post" class="card-body p-lg-5 form-custom-colors">
                     <div class="mb-3">
