--- a/tfg-frontend/src/main/resources/templates/paginas/credencialesTarjetaCliente.html
+++ b/tfg-frontend/src/main/resources/templates/paginas/credencialesTarjetaCliente.html
@@ -49,7 +49,7 @@
 <div class="container">
     <div class="row">
         <div class="col-md-6 offset-md-3">
-            <h2 class="text-center fw-bold">Credenciales de tarjeta</h2>
+            <h2 class="text-center fw-bold py-3">Credenciales de tarjeta</h2>
             <div class="card">
                 <form th:action="@{/frontend/comprobarTarjetaCliente}" method="post" class="card-body cardbody-color p-lg-5 form-custom-colors">
                     <div th:if="${msg != null}" class="alert alert-danger" role="alert">
