--- a/tfg-frontend/src/main/resources/templates/paginas/datosReserva.html
+++ b/tfg-frontend/src/main/resources/templates/paginas/datosReserva.html
@@ -49,7 +49,7 @@
 <div class="container my-auto">
     <div class="row">
         <div class="col-md-6 offset-md-3">
-            <h2 class="text-center fw-bold">Datos de la reserva</h2>
+            <h2 class="text-center fw-bold py-3">Datos de la reserva</h2>
             <div class="card">
                 <form th:action="@{/frontend/cargarActividades}" method="post" class="card-body form-custom-colors p-lg-5">
                     <div th:if="${msg != null}" class="alert alert-danger" role="alert">
