--- a/tfg-frontend/src/main/resources/templates/paginas/incidencias.html
+++ b/tfg-frontend/src/main/resources/templates/paginas/incidencias.html
@@ -46,7 +46,7 @@
 <div class="container">
     <div class="row">
         <div class="col-md-6 text-left">
-            <h2 class="text-center fw-bold">Añadir Incidencia</h2>
+            <h2 class="text-center fw-bold py-3">Añadir Incidencia</h2>
             <div class="card">
                 <form th:action="@{/frontend/guardarIncidencia}" method="post"  th:object="${incidencia}" class="card-body cardbody-color p-lg-5 form-custom-colors">
                     <div th:if="${msg_pos_guardar != null}" class="alert alert-success" role="alert">
@@ -65,7 +65,7 @@
             </div>
         </div>
         <div class="col-md-6">
-            <h2 class="text-center fw-bold">Incidencias del local</h2>
+            <h2 class="text-center fw-bold py-3">Incidencias del local</h2>
             <div class="card border-light">
                 <div th:if="${msg_pos_cerrar != null}" class="alert alert-success" role="alert">
                     <span th:text="${msg_pos_cerrar}"></span>
