--- a/tfg-frontend/src/main/resources/templates/paginas/reservaCliente.html
+++ b/tfg-frontend/src/main/resources/templates/paginas/reservaCliente.html
@@ -49,7 +49,7 @@
 <div class="container">
   <div class="row justify-content-center">
     <div class="col-lg-10">
-      <h2 class="text-center fw-bold">Datos de la reserva</h2>
+      <h2 class="text-center fw-bold py-3">Datos de la reserva</h2>
       <table class="table table-bordered table-custom">
         <thead class="thead-light">
         <tr>
