--- a/tfg-frontend/src/main/resources/templates/paginas/sitiosLista.html
+++ b/tfg-frontend/src/main/resources/templates/paginas/sitiosLista.html
@@ -60,7 +60,7 @@
 </nav>
 <div class="container">
     <div class="card border-light">
-        <h2 class="text-center fw-bold">Sitios</h2>
+        <h2 class="text-center fw-bold py-3">Sitios</h2>
         <div class="card-body border-light">
             <table class="table table-bordered table-custom">
                 <thead class="thead-light">
