--- a/tfg-frontend/src/main/resources/templates/paginas/tarjetaCliente.html
+++ b/tfg-frontend/src/main/resources/templates/paginas/tarjetaCliente.html
@@ -46,15 +46,15 @@
     </div>
   </div>
 </nav>
-<div class="container mt-5">
+<div class="container">
   <div class="row">
     <div class="col-md-6 text-left">
-      <h2 class="text-center fw-bold">Información de la tarjeta</h2>
+      <h2 class="text-center fw-bold py-3">Información de la tarjeta</h2>
       <p class ="text-center">Tickets en la tarjeta: <span th:text="${tarjeta.saldoTickets}"></span></p>
       <p class ="text-center">Saldo en la tarjeta: <span th:text="${tarjeta.saldoMoneda}"></span></p>
     </div>
     <div class="col-md-6">
-      <h2 class="text-center fw-bold">Añadir Saldo</h2>
+      <h2 class="text-center fw-bold py-3">Añadir Saldo</h2>
       <div class="card">
         <form th:action="@{/frontend/rellenarSaldoTarjeta}" method="post" class="card-body cardbody-color p-lg-5 form-custom-colors">
           <div th:if="${msg != null}" class="alert alert-danger" role="alert">
