--- a/tfg-frontend/src/main/resources/templates/home.html
+++ b/tfg-frontend/src/main/resources/templates/home.html
@@ -56,14 +56,14 @@
     </div>
     <div class="carousel-inner">
         <div class="carousel-item active">
-            <a th:href="@{/frontend/info}"><img src="/img/test_img.png" class="d-block w-100 vh-100" alt="..."></a>
+            <a th:href="@{/frontend/info}"><img src="/img/about-us.png" class="d-block w-100 vh-100" alt="..."></a>
             <div class="carousel-caption d-none d-md-block">
                 <h5>¿Quiénes Somos?</h5>
                 <p>Más información acerca de FunFun.</p>
             </div>
         </div>
         <div class="carousel-item">
-            <a th:href="@{/frontend/datosReserva}"><img src="/img/test_img.png" class="d-block w-100 vh-100" alt="..."></a>
+            <a th:href="@{/frontend/datosReserva}"><img src="/img/reserve-img.png" class="d-block w-100 vh-100" alt="..."></a>
             <div class="carousel-caption d-none d-md-block">
                 <h5>Reservar</h5>
                 <p>Haz tu reserva para disfrutar con nosotros.</p>
@@ -77,7 +77,7 @@
             </div>
         </div>
         <div class="carousel-item">
-            <a th:href="@{/frontend/credencialesTarjetaCliente}"><img src="/img/card_img.png" class="d-block img-fluid" alt="..."></a>
+            <a th:href="@{/frontend/credencialesTarjetaCliente}"><img src="/img/card-img.png" class="d-block w-100 vh-100" alt="..."></a>
             <div class="carousel-caption d-none d-md-block">
                 <h5>Ver Tarjeta</h5>
                 <p>Ve la información de tu tarjeta y recarga su saldo.</p>
